Improve logs and monitoring
Monitoring:
- More headers to better structure content.
- Add more references.

Diagnostic logs:
- Explain new diagnostic settings target: Azure marketplace partner.
- Describe configurations for diagnostic settings in more detail.
- Update "Diagnostic Log" to "Resource Log" to adopt terminology change.

Activity logs:
- Fix typo "Activitiy Log" to "Activity Log"

Monitoring storage:
- Describe "Storage insights" as storage monitoring solution.
- Describe "Azure storage logs" in Azure monitor.
- Explain that Storage Analytics is now obselete.
- Describe Storage Analytics Logs in its own header
- Add Microsoft Message Analyzer depreciation information.
- Add reference to Activity Logs in Azure Storage and unify its
  definition there.

Monitoring costs:
  - Move outside of Azure Storage and place under Monitoring
  - Replace obselete "Azure Resource Usage API" with "Azure Consumption
    API".
  - Change API information to generic summary instead of listing APIs
    for easier maintinability.

--- a/AZ-104 Microsoft Azure Administrator/3. Monitoring.md
+++ b/AZ-104 Microsoft Azure Administrator/3. Monitoring.md
@@ -64,31 +64,45 @@
 
 ## Log types
 
-- **Diagnostic Logs**
-  - Non-compute resources: Resource metrics
-  - Compute resources: Guest OS (e.g. syslog for Linux, event logs for Windows)
-  - Azure Monitoring Agents
-    - **Azure Diagnostics Extension** (cloud only)
-      - Windows Server and Linux
-      - useful for basic resource-level monitoring
-      - Deployed automatically to VM when you enable it.
-      - Boot diagnostics (serial console)
-    - **Log Analytics Agent** (hybrid solution)
-      - Can collect logs from Azure & on-prem systems to same namespace.
-- **Application Logs**
-  - Trace event streams
-  - Programmed in application itself.
-  - Application Insights
-    - Instrumentation tool
-    - HTTP requests
-    - Dependency Calls (to e.g. SQL, external services, background services)
-- **Activity Logs**
-  - Azure infrastructure logs
-  - E.g.
-    - Who created VM?
-    - Who configured this VNet?
-    - Traffic stream from NSG?
-  - Can be sent to: Log Analytics, Event Hubs, Azure Storage
+### Resource logs
+
+- Non-compute resources: Resource metrics
+- Compute resources: Guest OS (e.g. syslog for Linux, event logs for Windows)
+- Azure Monitoring Agents
+  - **Azure Diagnostics Extension** (cloud only)
+    - Windows Server and Linux
+    - useful for basic resource-level monitoring
+    - Deployed automatically to VM when you enable it.
+    - Boot diagnostics (serial console)
+  - **Log Analytics Agent** (hybrid solution)
+    - Can collect logs from Azure & on-prem systems to same namespace.
+- 🤗 Formerly known as **diagnostic logs** [1]
+
+[1]: https://docs.microsoft.com/en-us/azure/azure-monitor/terminology#october-2019---diagnostic-log-to-resource-log "Azure Monitor naming and terminology changes | Microsoft Docs"
+
+### Application logs
+
+- Trace event streams
+- Programmed in application itself.
+- Application Insights
+  - Instrumentation tool
+  - HTTP requests
+  - Dependency Calls (to e.g. SQL, external services, background services)
+
+### Activity logs
+
+- Azure infrastructure logs
+- E.g.
+  - Who created VM?
+  - Who configured this VNet?
+  - Traffic stream from NSG?
+- Types include: • Administrative events • Service health events • Autoscale events •  Recommendations • Security alerts • Alerts
+- ❗ Stored for 19 days
+- Through a diagnostic setting, they can be streamed into
+  - Storage account
+  - Log analytics workspace
+  - Azure marketplace partner
+  - Event Hub
 
 ## NSG (Network Security Group) Flow logging
 
