--- a/AZ-104 Microsoft Azure Administrator/4.1.2. Storage - Azure Storage - Monitoring.md
+++ b/AZ-104 Microsoft Azure Administrator/4.1.2. Storage - Azure Storage - Monitoring.md
@@ -1,43 +1,88 @@
 # Monitoring
 
-## Activity Log Monitoring
+- See also [Monitoring costs](./3.1.%20Monitoring%20-%20Monitoring%20costs.md)
 
-- Management logs:
+## Azure Monitor Storage Insights
+
+- Monitoring solution for storage accounts is called **Azure Monitor Storage insights**
+- Integrates with both Azure Monitor and storage accounts.
+- On portal, they can be viewed using: [2]
+  1. Inside storage account to see single account
+  2. View from Azure Monitor to see all accounts in a grouped way
+- Deployed by default
+- It's free of charge, but additional configurations cost [1]
+- Replaces former [Storage Analytics Metrics](#storage-analytics-metrics)
+- Metrics are visualized with thresholds using *workbooks* [1]
+  - Workbooks can be pinned in dashboards
+  - By default it includes already configured workbooks such as "Overview", "Capacity"...
+- Metric dimensions: `Authentication`, `ApiName`, `ResponseType`, `GeoType` [2]
+
+[1]: https://azure.microsoft.com/en-gb/pricing/details/monitor/ "Azure Monitor Pricing | Azure"
+[2]: https://docs.microsoft.com/en-us/azure/storage/common/storage-insights-overview "Monitoring your storage service with Azure Monitor Storage insights | Microsoft Docs"
+[3]: https://docs.microsoft.com/en-us/azure/storage/common/storage-insights-overview#view-from-azure-monitor "View from Azure Monitor | Azure Monitor Storage insights | Microsoft Docs"
+[4]: https://docs.microsoft.com/en-us/azure/storage/queues/monitor-queue-storage-reference#metrics-dimensions "Azure Monitor metric dimensions"
+
+## Azure Storage logs in Azure Monitor
+
+- Provide detailed information about successful and failed requests to a storage service.
+- Type of [resource logs](./3.%20Monitoring.md#resource-logs)
+  - Enabled in Diagnostic settings
+- Includes fields such as `time`, `resourceId`, `category` (read, write or delete), `operationName`, `statusCode`, `callerIpAddress`... [1]
+
+[1]: https://docs.microsoft.com/en-us/azure/storage/queues/monitor-queue-storage-reference#resource-logs-preview "Resource log fields | Azure storage | Microsoft Docs"
+
+## Activity logs from Azure Storage
+
+- Management-plane logs:
   - Role assignments
   - Regenerating Storage Account keys
   - Changing Storage Account settings
-- Not data plane logs e.g. new blob added, they're diagnostic logs
+- ❗️ Not data plane logs e.g. "new blob added"
+  - But they're resource logs e.g. "who created new storage account"
+- See also: [Activity logs | Monitoring](./3.%20Monitoring.md#activity-logs)
 
-### Activitiy Log Events
+## Classic monitoring
 
-- Types include: • Administrative events • Service health events • Autoscale events •  Recommendations • Security alerts • Alerts
-- ❗ Stored for 19 days
-- Archival possible
-  - To Storage Account
-  - To Event Hub
+- Legacy monitoring solutions that should not be used for newer systems.
+- Replaced by [Azure Monitor Storage Insights](#azure-monitor-storage-insights), and should be migrated there.
+- Needs to be enabled manually.
 
-## Storage Analytics
+### Storage Analytics overview
 
-- Type of diagnostic logs
-  - Enabled in Diagnostic settings
 - ❗ Retention period up to 365 days.
 - Contains
   - Details of read, write, and delete operations
   - Reasons for failed requests
 - Issues can be found through monitoring or reported by users
-- Data includes: • Type of Operation • Success or Failure • Object Key • HTTP Status Code • Start Time • Server and E2E Latency • Authentication Type • IP Address of Caller • Browser Information • Type of Client • Client Operation ID • Server Operation ID
+- Data consists of
+  - [Logs](#storage-analytics-logs) - shows detailed information about requests to a storage service
+  - [Metrics](#storage-analytics-metrics)
 - Write blobs to blocks immediately
   - ❗ Can take an hour until available as flush is waited.
   - Search +/- 15 minutes and based on log metadata
 - ❗ 20 TB limit, independent of Storage Account total limit.
-- You can download **Microsoft Message Analyzer** and analyze logs in a good UI instead of text files.
+- 🤗 **Microsoft Message Analyzer** was GUI to analyze logs that was later dropped by Microsoft [1]
+
+[1]: https://docs.microsoft.com/en-us/message-analyzer/microsoft-message-analyzer-operating-guide
+
+### Storage Analytics Logs
+
+- Helps to monitor individual requests and to diagnose issues with a storage service.
+- ❗️ Best effort logging, completeness and timeliness of are not guaranteed. [1]
+- All logs are stored in block blobs in a container named `$logs`. [1]
+- Logs include succeeded/failed requests with additional metadata such as
+  - HTTP status code, start time, end time, log type (write, read etc.)...
+- ❗️ Replaced by [Azure Storage logs in Azure Monitor](#azure-storage-logs-in-azure-monitor) [1]
+
+[1]: https://docs.microsoft.com/en-us/azure/storage/common/storage-analytics-logging
 
 ### Storage Analytics Metrics
 
-- Enabled as default
+- Also known as **classic metrics**
+- ❗️ Retired on August 31, 2023, should transition into [Storage Insights](#azure-monitor-storage-insights) [1]
 - Integrates with Azure monitor
   - ❗ Data is stored 30 days.
-- Setting up alerts
+- Allows setting up alerts.
 - Sends
   - **Capacity metrics**
     - For both storage accounts and individual storage services
@@ -47,52 +92,7 @@
     - Successful, failed, errors
     - Ingress/Egress of data
     - Service availability
-  - **Performance metrics**: Server latency, E2E (end-to-end) latency
-- Metric dimensions: Response type, API calls, authentication type, geotype
+  - **Performance metrics**
+    - Server latency, E2E (end-to-end) latency
 
-## Monitoring costs
-
-- **Estimating costs**
-  - [Azure Pricing Calculator](https://azure.microsoft.com/en-us/pricing/calculator/)
-  - [Azure Total Cost of Ownership (TCO) Calculator](https://azure.microsoft.com/en-us/pricing/tco/calculator/)
-    - Calculate the cost savings by migrating from on-premises to Azure
-- **End of month bills**
-  - Invoice, detailed usage CSV file
-
-### Azure Cost Management
-
-- Detailed cost analysis
-  - Consumption, cost, performance
-  - In portal
-    - Open scope (e.g. subscription or resource) → Click on code analysis blade
-    - Or go to "Cost Management" → "Cost analysis" and change scope on top
-- Resource optimizations
-  - Identify underutilized resources
-- Budgets, alerts, action groups
-  - Compare costs against budget
-- Cross-cloud
-  - Manage Azure, Amazon and Google cloud resources in one tool.
-- In portal can be found
-- 🤗 Replaces **Cloudyn** that was a third party cost management service which was acquired by Microsoft in 2017 and integrated in Azure Cost Management, Cloudyn is deprecated since 2020 but existing users can still user.
-
-### Monitoring costs using portal
-
-- In Subscription → Cost Analysis
-  - Filter, view consumptions per resource/tags etc.
-- Subscription → Invoices
-  - Shows invoices
-  - ❗ It does not show individual resources.
-    - To see them go to: Subscription → Manage and download invoices
-
-### Monitoring costs using Azure Billing APIs
-
-- **Non-enterprise customers**
-  - Azure Resource RateCard API
-    - Pricelist across different regions/currencies
-  - Azure Resource Usage API
-- **Enterprise customers**
-  - Balance and Summary API
-  - Usage Details API
-  - Marketplace Store Charge API
-  - Price Sheet API
-  - Billing Periods API
+[1]: https://azure.microsoft.com/en-gb/updates/azure-storage-classic-metrics-will-be-retired-on-31-august-2023/ "Azure Storage classic metrics will be retired on 31 August 2023 | Azure Docs"
