--- a/AZ-303 Microsoft Azure Architect Technologies/2.1. Monitoring.md
+++ b/AZ-303 Microsoft Azure Architect Technologies/2.1. Monitoring.md
@@ -39,7 +39,7 @@
 
 ### Data types
 
-- Two levels of logs: resource (*metrics*) and platform (*activity log*, *diagnostic log*).
+- Two levels of logs: resource (*[metrics](#metrics)* and platform (*[activity log](#activity-log)*, *[resource log](#resource-log)*).
 - All data types can be queried in Portal, PowerShell, Rest API or CLI.
 
 #### Metrics
@@ -54,12 +54,12 @@
 
 #### Activity Log
 
-- On platform level
-- "Outside operations" that are subscription-level events
-- Previously known as "Audit Logs" or "Operational Logs"
+- On platform level.
+- "Outside operations" that are subscription-level events.
+- Previously known as "Audit Logs" or "Operational Logs".
 - Determine "what, who and when" for any write operation taken on the resources.
 - 90 days free to store, fore more send to Log Analytics (["connect" button in Activity Logs blade of Log Analytic](https://docs.microsoft.com/en-us/azure/log-analytics/log-analytics-activity)), archive to storage account ([click on Export to Event Hubs in Azure Monitor](https://docs.microsoft.com/en-us/azure/monitoring-and-diagnostics/monitoring-archive-activity-log)) or  stream to other services ([click on Export to Event Hubs in Azure Monitor](https://docs.microsoft.com/en-us/azure/monitoring-and-diagnostics/monitoring-stream-activity-logs-event-hubs)).
-  - During export you create a Log Profile you control how/where/what is exporreted for how long.
+  - During export you create a Log Profile you control how/where/what is exported for how long.
 
 ##### Activity log categories
 
@@ -87,14 +87,49 @@
 - **Policy**
   - All effect action operations performed by Azure Policy.
   - Types include audit and deny
+- 💡 Security monitoring should be set-up for Administrative, Security, Policy and ServiceHealth
 
-#### Diagnostic Log
+#### Resource log
 
-- On platform level
-- "Inside operations" within the resource
+- On platform level.
+- "Inside operations" within the resource.
 - Resource-specific with common scheme where resources include their own properties.
-- E.g. IIS logs, web server logging, failed request tracking
-- Can be streamed (to Power BI, Azure Functions etc.), added in blob storage, and sent directly to Log Analytics
+- E.g. IIS logs, web server logging, failed request tracking.
+- Can be streamed (to Power BI, Azure Functions etc.), added in blob storage, and sent directly to Log Analytics.
+- 🤗 Formerly known as **diagnostic logs** [1]
+
+[1]: https://docs.microsoft.com/en-us/azure/azure-monitor/terminology#october-2019---diagnostic-log-to-resource-log "Azure Monitor naming and terminology changes | Microsoft Docs"
+
+### Diagnostic settings
+
+- Diagnostic setting is resource deployed to send logs different destinations.
+- Each Azure resource requires its own diagnostic setting
+- A diagnostic setting consists of
+  - Sources (depends on resource type)
+  - [Destinations](#diagnostic-settings-destinations) (destinations to send)
+
+#### Diagnostic settings destinations
+
+- Logs can be sent to resources across subscriptions [4]
+- Using Azure Lighthouse, it can be sent across tenants [4]
+- Resources that can be sent include:
+  - A storage account (`storageAccountId` [1])
+    - Allows archival
+    - Allows you to configure retention in days[5] (`retentionPolicy` [1])
+    - 💡 Can enable immutable on blob storage to protect against tampering [2]
+  - Log analytics workspace (`workspaceId`)
+    - Metrics are converted to forms and sent to **Azure Monitor Logs**
+    - Helps to query, visualize, set-up alerts and integrate with **Azure Sentinel**
+  - Azure marketplace resource (`marketplacePartnerId`)
+    - Also known as **partner integrations** [3]
+    - E.g. Datadog, Elastic, Logz.io.
+  - Event Hub (`eventHubName`)
+
+[1]: https://docs.microsoft.com/en-us/azure/templates/microsoft.insights/diagnosticsettings "Bicep & ARM templates | Microsoft Docs"
+[2]: https://docs.microsoft.com/en-us/azure/storage/blobs/immutable-policy-configure-version-scope "Configure immutability policies for blob versions | Microsoft Docs"
+[3]: https://docs.microsoft.com/en-us/azure/partner-solutions/overview "Extend Azure with solutions from partners | Microsoft Docs"
+[4]: https://docs.microsoft.com/en-us/azure/azure-monitor/essentials/diagnostic-settings#destination-limitations "Destination Limitations | Create diagnostic settings | Microsoft Docs"
+[5]: https://docs.microsoft.com/en-us/azure/azure-monitor/essentials/diagnostic-settings#create-in-azure-portal "Create in Azure portal | Create diagnostic settings | Microsoft Docs"
 
 ## Azure Alerts
 
