--- a/AZ-104 Microsoft Azure Administrator/1.3. Management - Resource Groups.md
+++ b/AZ-104 Microsoft Azure Administrator/1.3. Management - Resource Groups.md
@@ -26,8 +26,8 @@
 ## IAM
 
 - Access control, RBAC
-- Roles are iherited
-- ***Role assignment***: Role defination role (role, e.g. Reader) + Person/Scope/Service Principal + Scope
+- Roles are inherited
+- ***Role assignment***: Role definition role (role, e.g. Reader) + Person/Scope/Service Principal + Scope
 
 ## Policies
 
