Update 5.3 Compute - Virtual machines (VMs) - VM Scale Sets (VMMS).md

--- a/AZ-104 Microsoft Azure Administrator/5.3 Compute - Virtual machines (VMs) - VM Scale Sets (VMMS).md
+++ b/AZ-104 Microsoft Azure Administrator/5.3 Compute - Virtual machines (VMs) - VM Scale Sets (VMMS).md
@@ -69,8 +69,8 @@
   - Select scale-mode
   - **Scale based on metric**
     - Add rule
-    - E.g. increase instance count by 1 when CPU procentage above 70%
-    - 💡 You should also create scale mode that bringd down the scale count
+    - E.g. increase instance count by 1 when CPU percentage above 70%
+    - 💡 You should also create scale mode that bring down the scale count
     - Properties
       - Duration: Good to not be confused when scaling out/in, so set a duration to e.g. 10 minutes
       - Cooldown: Waits after scale operation before new scale operation
