Update 5.4. Compute - Virtual machines (VMs) - Security.md

--- a/AZ-104 Microsoft Azure Administrator/5.4. Compute - Virtual machines (VMs) - Security.md
+++ b/AZ-104 Microsoft Azure Administrator/5.4. Compute - Virtual machines (VMs) - Security.md
@@ -8,7 +8,7 @@
   - A: Authorization (abilities)
   - A: Accounting (auditing)
 - Higher to lower granularity
-  - Managemnt groups → Subscription → Resource group → Resource
+  - Management groups → Subscription → Resource group → Resource
 - Roles
   - **Reader**: Observers
   - Resource-specific or custom role, **contributor**: Users managing resources
