Update 5.5. Compute - Virtual machines (VMs) - Backups.md

--- a/AZ-104 Microsoft Azure Administrator/5.5. Compute - Virtual machines (VMs) - Backups.md
+++ b/AZ-104 Microsoft Azure Administrator/5.5. Compute - Virtual machines (VMs) - Backups.md
@@ -2,7 +2,7 @@
 
 ## VM Disk Snapshots
 
-- .VHD files (data + os disks in page blobs) are stored aas page blobs.
+- .VHD files (data + os disks in page blobs) are stored as page blobs.
 - Full and incremental point-in-time snapshots
 - Faster than performing full back-ups
   - 💡 The difference is that snapshots are deltas
@@ -15,7 +15,7 @@
   - 💡 Consider archiving them
 - You can create new VM from a snapshot.
 - In Portal -> VM -> Disks -> Select Disk -> Create Snapshot
-- In Snaphots -> Find snapshot ->
+- In Snapshots -> Find snapshot ->
   - Export:
   - You export with creating SAS URL (time limited)
   - You get direct URL
