Describe app registration, enterprise apps, SPs

--- a/AZ-104 Microsoft Azure Administrator/2.2.1. Governance - Azure AD - Entities.md
+++ b/AZ-104 Microsoft Azure Administrator/2.2.1. Governance - Azure AD - Entities.md
@@ -1,5 +1,21 @@
 # Azure AD Entities
 
+## Overview
+
+- Azure AD entities are objects registered in Azure AD.
+- They're uniquely identifiable.
+
+### Security principal
+
+- Also known as **security identity** or **security object**.
+- Defines the access policy and permissions for the user/application in the Azure AD tenant.
+- Enables
+  - Authentication of the user/application during sign-in.
+  - Authorization during resource access (Azure RBAC).
+- There are two types of security principals:
+  - [User principals](#users) i.e. users
+  - [Service principals](#service-principal) i.e. applications
+
 ## Users
 
 ### Types of users
@@ -62,16 +78,18 @@
       - Notify users on password resets
       - Notifies all other admins when an admin resets his password
 
-### User settings
+### User access to applications
 
-- Enterprise applications
+- In Azure AD you can configure certain access that users can to on application objects.
+- [Application registrations](#application-registration)
+  - Users can register applications (yes/no)
+    - Yes; non-administrators can register applications to be used within the directory.
+    - No; only administrators can do it.
+- [Enterprise applications](#enterprise-application)
   - Users can consent to apps accessing company data on their behalf (yes/no)
     - Yes; users can consent to allow third party and multi-tenant applications to consent on their own behalf.
-  - Users can add gallery apps to their Access Panel
-    - No; as an administrator you have to manually integrate the applciations through Access Panel
-- App registrations
-  - Users can register applications (yes/no)
-    - Yes; non administratiors can register applications to be used within the directory, no; only administrators can do it
+  - Users can add gallery apps to their Access Panel (yes/no)
+    - No; as an administrator you have to manually integrate the applications through Access Panel
 
 ## Groups
 
@@ -181,3 +199,96 @@
   - Available on select SaaS apps
 - In portal, you can assign access to applications
   - AD → Applications → Select application → Users and groups
+
+### Application registration
+
+- Also known as **app registration**
+- Identity configuration of an application that allows integration with Azure AD.
+- Creates a unique [application object](#application-object) in Azure tenant.
+- 💡 You usually use app registrations for apps that you develop yourself.
+- Used to create [service principals](#service-principal).
+  - Using portal
+    - If created using portal, service principal is created as well.
+    - Service principal can only be created by creating app registration in portal.
+  - APIs
+    - If created using Microsoft Graph APIs, service principal object is created in separate step.
+    - Service principals can be created using e.g. Azure PowerShell, Azure CLI, Microsoft Graph...
+- Using CLI: `az ad app create --display-name "displayName"`
+
+#### Application object
+
+- Object created by an application registration.
+- Its object is globally unique with ID known as **app ID** or **client ID**.
+- Resides in same tenant application was registered (also known as home tenant).
+- It's used to create one or more [service principals](#service-principal).
+- It can be seen as a template to create service principal.
+  - Or in object-oriented terms; abstract base class for service principal.
+  - All service principals created inherits some properties from application.
+- It defines three configurations:
+  1. How the service can issue tokens in order to access the application.
+  2. Resources that the application might need to access.
+  3. Actions that the application can take.
+- See [application entity in Microsoft Graph](https://docs.microsoft.com/en-us/graph/api/resources/application) for its scheme
+
+#### Service principal
+
+- An uniquely identifiable object.
+- [Security principal](#security-principal) enabling access to Azure AD secured resources.
+- Defines the access policy and permissions for the user/application in the Azure AD tenant.
+- There are three types of service principal:
+  1. Application
+     - Created from [application object](#application-object) inheriting some of its properties.
+     - Created in each tenant where [application object](#application-object) is used.
+     - Describes what [application](#application-object) can access and can be accessed by in tenant.
+  2. Managed identity
+     - Used to present a managed identity.
+     - Managed identities eliminate the need for developers to manage credentials.
+     - Created when managed identity is enabled in a resource.
+     - They can be can be granted access and permissions.
+     - ❗️ They cannot be updated or modified directly
+  3. Legacy
+     - Created before app registrations were introduced or using legacy ways.
+- On portal they can be managed in "Azure AD → Enterprise Applications" blade
+- See [service principal entity in Microsoft Graph](https://docs.microsoft.com/en-us/graph/api/resources/serviceprincipal) for its scheme
+- Using CLI
+  - Create SP: `az ad sp create --id "<existing-application-id>"`
+  - Assign roles: `az role assignment create --assignee "<service-principal-object-id>/<application-id>" --role role_name`
+
+##### Enterprise application
+
+- Service principals are also known as **enterprise applications**
+- In Azure portal, service principals are listed  and can be managed in "Azure AD → Enterprise Applications" blade.
+- Enterprise Applications is category of Service Principal where
+  - Service Principal and Application registration are in same tenant.
+  - Service Principal has tag `WindowsAzureActiveDirectoryIntegratedApp` [1]
+    - ❗️ Otherwise it won't be listed in "Azure AD → Enterprise Applications" [1]
+    - 💡 You can add tag using `az ad sp update --id "service_principal_object_id" --add tags WindowsAzureActiveDirectoryIntegratedApp`.
+
+[1]: https://docs.microsoft.com/en-us/powershell/module/azuread/new-azureadserviceprincipal?view=azureadps-2.0#parameters
+
+#### Application object vs service principal
+
+- *Application object* is base template to derive to create *service principal objects*.
+- *Application object* has
+  - One-to-one relation with software application.
+  - One-to-many relation with service principals.
+- Deleting an *application object* delete its associated *service principal objects*.
+  - ❗️ Restoring it will not restore *service principal objects* back.
+- Tenancy
+  - *Application object* is global representation of an application for use across all tenants.
+  - *Service principal* is the local representation for use in a specific tenant.
+    - It must be created in each tenant where the application is used.
+    - A single-tenant application has only one service principal (in its home tenant).
+
+##### Application registration configurations
+
+- During registration:
+  - Tenancy
+    - single-tenant (accessible in one tenant),
+    - or multi-tenant (accessible in other tenants).
+  - Redirect URI
+    - Can be customized.
+    - It's where the access token is sent to.
+- After registration:
+  - Add secrets or certificates and scopes to make app accessible
+  - Customize the branding (e.g. a logo) in the sign-in dialog
