--- a/AZ-104 Microsoft Azure Administrator/2.2.2. Governance - Azure AD - Hybrid Identities.md
+++ b/AZ-104 Microsoft Azure Administrator/2.2.2. Governance - Azure AD - Hybrid Identities.md
@@ -243,29 +243,31 @@
 
 ## Making cloud apps available
 
-- Azure AD → Enterprise Applications
-- 4 categories
-  1. Gallery applications
-  2. Applications you're developing, integrated with Azure AD
-  3. On-premises applications with Azure AD Application Proxy
-     - **Azure AD Application Proxy**
-       - Allows Azure to reach on-premises resources.
-       - Consistent access to private resources without a VPN.
-       - Install App Proxy & Connector on-premises
-         - ❗ Cannot be installed on a server with the Pass Through Authentication connector
-         - ❗ You need to configure a CNAME on DNS for the particular domain work for it to work.
-       - Set-up on Azure
-         - Add applications
-         - Assign to users
-         - Configure SSO
-         - Provision just like any SaaS app
-       - Flow for Azure user reaching on-premises resource:
-         1. Azure AD gives a token to user
-         2. User sends that token to Azure App Proxy
-         3. Proxy takes UPN and SPN and gives it to connector
-         4. Connector goes to on-prem AD and gets Kerberos ticket.
-         5. It forwards it to actual on-prem application, it verifies the ticket and ticket is assigned to the cloud user.
-  4. Non-gallery applications
+- Cloud apps are registered as [Enterprise Application](./2.2.1.%20Governance%20-%20Azure%20AD%20-%20Entities.md#Enterprise-Application)
+- Configured in portal
+  - Azure AD → Enterprise Applications
+  - 4 categories
+    1. Gallery applications
+    2. Applications you're developing, integrated with Azure AD
+    3. On-premises applications with Azure AD Application Proxy
+       - **Azure AD Application Proxy**
+         - Allows Azure to reach on-premises resources.
+         - Consistent access to private resources without a VPN.
+         - Install App Proxy & Connector on-premises
+           - ❗ Cannot be installed on a server with the Pass Through Authentication connector
+           - ❗ You need to configure a CNAME on DNS for the particular domain work for it to work.
+         - Set-up on Azure
+           - Add applications
+           - Assign to users
+           - Configure SSO
+           - Provision just like any SaaS app
+         - Flow for Azure user reaching on-premises resource:
+           1. Azure AD gives a token to user
+           2. User sends that token to Azure App Proxy
+           3. Proxy takes UPN and SPN and gives it to connector
+           4. Connector goes to on-prem AD and gets Kerberos ticket.
+           5. It forwards it to actual on-prem application, it verifies the ticket and ticket is assigned to the cloud user.
+    4. Non-gallery applications
 - Manage permission
   - Azure AD → Enterprise Applications → In application → Users and groups
 - Configure SSO
